<resources>
    <string name="app_name">Feira D\'água</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_client">Cliente</string>
    <string name="string_producer">Produtor</string>
    <string name="string_options_title">Em qual perfil você se enquadra?</string>
    <string name="string_whatsapp_title">Qual o seu número de WhatsApp?</string>
    <string name="string_whatsapp_number_hint">Digite o seu número de WhatsApp</string>
    <string name="string_cep">Qual é o seu CEP?</string>
    <string name="string_cep_hint">Informe o seu CEP</string>
    <string name="string_street_title">Qual é a sua rua?</string>
    <string name="string_street_hint">Informe o seu endereço</string>
    <string name="string_district_title">Qual é o seu bairro?</string>
    <string name="string_district_hint">Informe o seu bairro</string>
    <string name="string_number_title">Qual é o número de sua residência?</string>
    <string name="string_number_hint">Informe o número da sua residência</string>
    <string name="string_number_title_producer">Qual é o número de sua empresa?</string>
    <string name="string_number_hint_producer">Informe o número da sua empresa</string>
    <string name="string_complement_title">Sua residência possui um complemento?</string>
    <string name="string_complement_hint">Informe o complemento de sua residência</string>
    <string name="string_complement_title_producer">Sua empresa possui um complemento?</string>
    <string name="string_complement_hint_producer">Informe o complemento de sua empresa</string>
    <string name="string_city_title">Qual a cidade onde você reside?</string>
    <string name="string_city_hint">Informe a cidade em que você reside</string>
    <string name="string_next_button">Avançar</string>
    <string name="string_finish_order">Finalizar Pedido</string>
    <string name="string_presentation_title">Diga um pouco mais sobre vocês!!</string>
    <string name="string_presentation_hint">Insira uma apresentação</string>
    <string name="string_delivery_title">Diga-nos sua área de entrega</string>
    <string name="string_delivery_title_user">Para filtrarmos melhor os produtores, nos informe a região em que reside</string>
    <string name="string_florianopolis_north">Florianópolis - Norte</string>
    <string name="string_florianopolis_center">Florianópolis - Centro</string>
    <string name="string_florianopolis_south">Florianópolis - Sul</string>
    <string name="string_florianopolis_east">Florianópolis - Leste</string>
    <string name="string_garopaba">Garopaba</string>
    <string name="string_imbituba">Imbituba</string>
    <string name="string_biguacu">Biguaçu</string>
    <string name="string_palhoca">Palhoça</string>
    <string name="string_bank_transfer">Transferência</string>
    <string name="string_pix">Pix</string>
    <string name="string_debit_card">Cartão de Débito</string>
    <string name="string_credit_card">Cartão de Crédito</string>
    <string name="string_payment_title">Diga-nos as formas de pagamento</string>
    <string name="string_category_title">Diga-nos em quais categorias o seu comércio se enquadra</string>
    <string name="string_category_producer_profile_title">Categorias</string>
    <string name="string_d">D</string>
    <string name="string_s">S</string>
    <string name="string_t">T</string>
    <string name="string_q">Q</string>
    <string name="string_delivery_period_title">Diga-nos os dias de entrega</string>
    <string name="string_search_title">Buscar</string>
    <string name="string_cart_title">Carrinho</string>
    <string name="string_profile_title">Perfil</string>
    <string name="string_my_orders_title">Meus Pedidos</string>
    <string name="string_search_a_productor_hint">Pesquise um produtor</string>
    <string name="string_your_cart_title">Seu Carrinho</string>
    <string name="string_total_title">Total</string>
    <string name="string_name_title">Nome</string>
    <string name="string_name_not_found">Nome não encontrado</string>
    <string name="string_email_title">E-mail</string>
    <string name="string_email_not_found">E-mail não encontrado</string>
    <string name="string_cellphone_title">Celular</string>
    <string name="string_cellphone_not_found">Celular não encontrado</string>
    <string name="string_adress_title">Endereço</string>
    <string name="string_adress_not_found">Endereço não encontrado</string>
    <string name="string_delivery_area_title_user">Região de Entrega</string>
    <string name="string_delivery_area_not_found">Endereço de entrega não encontrado</string>
    <string name="string_update_profile_button">Atualizar Perfil</string>
    <string name="string_contact_title">Contato</string>
    <string name="string_contact_not_found">Contato não encontrado</string>
    <string name="string_presentation_title_profile">Apresentação</string>
    <string name="string_presentation_not_found">Apresentação não encontrada</string>
    <string name="string_payment_title_profile">Formas de Pagamento</string>
    <string name="string_delivery_area_title">Área de Entrega</string>
    <string name="string_update_products">Atualizar Produtos</string>
    <string name="string_pending_orders_title">Pedidos Pendentes</string>
    <string name="string_user_historic_title">Histórico de Pedidos</string>
    <string name="string_products_tabLayout">Produtos</string>
    <string name="string_about_us_tabLayout">Sobre Nós</string>
    <string name="string_product_description_not_found">Descrição do produto não encontrada</string>
    <string name="string_product_weigth_not_found">Tamanho da porção não informado</string>
    <string name="string_product_name_title">Nome do Produto</string>
    <string name="string_add_to_cart_button">Adicionar ao Carrinho</string>
    <string name="string_update_data">Atualizar Dados</string>
    <string name="string_init_login">Entrar</string>
    <string name="string_client_title">Cliente</string>
    <string name="string_accept_order_button">Aceitar Pedido</string>
    <string name="string_decline_order_button">Recusar Pedido</string>
    <string name="string_delivery_title_order_details">Entrega</string>
    <string name="string_new_product">Novo Produto</string>
    <string name="string_product_name_hint">Digite o nome do produto</string>
    <string name="string_product_description_title_update">Descrição do produto</string>
    <string name="string_product_description_hint">Digite a descrição do produto</string>
    <string name="string_product_price_title_update">Preço do Produto</string>
    <string name="string_product_price_hint">Digite o preço do produto</string>
    <string name="string_product_weight_title_update">Tamanho da Porção</string>
    <!--    <string name="string_product_weight_hint">Digite o preço do produto</string>-->

    <string name="string_mask_cep">#####-###</string>
    <string name="string_mask_cellphone">(##) #####-####</string>
    <string name="string_mask_uf">##</string>
    <string name="string_error_message">O campo %1$s é obrigatório</string>
    <string name="string_error_message_cep">O CEP deve conter 8 dígitos</string>
    <string name="string_error_phone_not_valid">O Celular não é válido</string>
    <string name="string_error_value_equals_zero">O preço não pode ser R$ 0.00</string>
    <string name="string_cellphone">Celular</string>
    <string name="string_name">Nome</string>
    <string name="string_cep_error">CEP</string>
    <string name="string_city">Cidade</string>
    <string name="string_district">Bairro</string>
    <string name="string_number">Número</string>
    <string name="string_street">Logradouro</string>
    <string name="string_uf_title">Qual a UF do seu Estado?</string>
    <string name="string_uf_hint">Informe a UF do seu Estado</string>
    <string name="string_uf">UF</string>
    <string name="string_description">Descrição</string>
    <string name="string_gallery">Galeria</string>
    <string name="string_take_photo">Tirar Foto</string>
    <string name="string_log_out_button">Sair</string>
    <string name="string_delivery_days_title">Dias de Entrega</string>
    <string name="string_order_not_found">Nenhum Pedido Registrado</string>

    <string name="string_dialog_cancel">Cancelar</string>
    <string name="string_dialog_delete">Deletar</string>
    <string name="string_dialog_title">Deletar Produto</string>
    <string name="string_dialog_message">Deseja excluir esse produto?</string>
    <string name="string_dialog_message_cart">Deseja excluir esse produto do carrinho?</string>
    <string name="string_dialog_send">Enviar</string>
    <string name="string_dialog_title_order">Por quais motivos recusou este pedido?</string>
    <string name="string_dialog_email_message">
        Foi enviado um e-mail de verificação para o seguinte e-mail: %1$s. Para continuar a usar o App essa ação é necessária!!
    </string>
    <string name="string_dialog_ok">Irei Verificar</string>
    <string name="string_dialog_title_email">Verifique o seu E-mail</string>
    <string name="string_snackbar_delete_done">Produto excluído com sucesso</string>
    <string name="string_snackbar_order_sent">Pedido Enviado ao Produtor! Aguarde um retorno!</string>
    <string name="string_my_products">Meus Produtos</string>
    <string name="string_product_not_found">Nenhum Produto Cadastrado!</string>
    <string name="string_name_title_update">Qual o nome da sua empresa?</string>
    <string name="string_name_hint">Digite o nome da sua empresa</string>
    <string name="string_name_title_update_user">Qual é o seu nome?</string>
    <string name="string_name_hint_user">Digite o seu nome</string>
    <string name="string_name_title_profile">Olá, %1$s!</string>
    <string name="string_product_not_found_order">Nenhum Produto Adicionado ao Carrinho</string>

    <string-array name="string_array_cancel_order_options">
        <item>Sem Estoque Desses Produtos no Momento</item>
        <item>Data de Entrega Indisponível</item>
    </string-array>

    <string-array name="string_spinner_weight_array">
        <item>Unidade</item>
        <item>Dúzia</item>
        <item>1/2 Dúzia</item>
        <item>Gramas</item>
    </string-array>

    <string name="string_title_notification_from_user">Novo Pedido &#128515;</string>
    <string name="string_message_notification_from_user">O cliente %1$s realizou um novo pedido</string>
    <string name="string_title_notification_from_producer_decline">Pedido Não Aceito &#128577;</string>
    <string name="string_message_notification_from_producer_decline">
        Infelizmente o produtor não aceitou o seu pedido devido o seguinte problema: %1$s.
    </string>
    <string name="string_title_notification_from_producer_accept">Pedido Aceito &#127881;</string>
    <string name="string_message_notification_from_producer_accept">
        Aceitaram o Seu Pedido, em Breve o Produtor irá Entrar em Contato!!
    </string>
    <string name="string_back_arrow">Voltar</string>
    <string name="string_chip_fish">Peixes</string>
    <string name="string_chip_aquaponic">Hidroponia e/ou Aquaponia</string>
    <string name="string_chip_oyster">Ostras e Mariscos</string>
    <string name="string_chip_shrimp">Camarão</string>
    <string name="string_producer_not_found">Nenhum Produtor Encontrado em Sua Região!</string>
    <string name="string_limit_products">*Obs: Inicialmente, os produtores só poderão registrar um total de 5 produtos</string>
    <string name="string_limit_products_user">*Obs: Inicialmente, os produtores só poderão registrar 5 produtos no app. Caso não tiver encontrado o que buscava, entre em contato!!</string>
    <string name="string_spinner_tag_weight">spinnerWeight</string>
</resources>